--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
